--- a/app/src/main/res/layout/list_item_forecast.xml
+++ b/app/src/main/res/layout/list_item_forecast.xml
@@ -3,55 +3,55 @@
     android:id="@+id/list_item_forecast_linearlayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
     android:gravity="center_vertical"
-    android:minHeight="48dp" >
+    android:minHeight="48dp"
+    android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/list_item_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_launcher"
-        android:layout_weight="1"/>
+  <ImageView
+      android:id="@+id/list_item_icon"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_weight="1"
+      android:src="@drawable/ic_launcher"/>
 
-    <LinearLayout
+  <LinearLayout
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_weight="1"
+      android:orientation="vertical">
+
+    <TextView
+        android:id="@+id/list_item_date_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_weight="1">
-        
-        <TextView
-            android:id="@+id/list_item_date_textview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Yesterday"/>
-        
-        <TextView
-            android:id="@+id/list_item_forecast_textview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Meteors"/>
-        
-    </LinearLayout>
-    
-    <LinearLayout
+        android:text="Yesterday"/>
+
+    <TextView
+        android:id="@+id/list_item_forecast_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_weight="1">
-        
-        <TextView
-            android:id="@+id/list_item_high_textview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="200"/>
-        
-        <TextView
-            android:id="@+id/list_item_low_textview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="-100"/>
-        
-    </LinearLayout>
+        android:text="Meteors"/>
+
+  </LinearLayout>
+
+  <LinearLayout
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_weight="1"
+      android:orientation="vertical">
+
+    <TextView
+        android:id="@+id/list_item_high_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="200"/>
+
+    <TextView
+        android:id="@+id/list_item_low_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="-100"/>
+
+  </LinearLayout>
 
 </LinearLayout>
