--- a/app/src/main/res/layout/list_item_forecast.xml
+++ b/app/src/main/res/layout/list_item_forecast.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/list_item_forecast_linearlayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
@@ -23,14 +22,12 @@
     <TextView
         android:id="@+id/list_item_date_textview"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Yesterday"/>
+        android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/list_item_forecast_textview"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Meteors"/>
+        android:layout_height="wrap_content" />
 
   </LinearLayout>
 
@@ -43,14 +40,12 @@
     <TextView
         android:id="@+id/list_item_high_textview"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="200"/>
+        android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/list_item_low_textview"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="-100"/>
+        android:layout_height="wrap_content" />
 
   </LinearLayout>
 
