--- a/app/src/main/res/layout/list_item_forecast.xml
+++ b/app/src/main/res/layout/list_item_forecast.xml
@@ -10,14 +10,17 @@
       android:id="@+id/list_item_icon"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_weight="1"
       android:src="@drawable/ic_launcher"/>
 
   <LinearLayout
-      android:layout_width="wrap_content"
+      android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_weight="1"
-      android:orientation="vertical">
+      android:orientation="vertical"
+      android:paddingStart="32dp"
+      android:paddingLeft="32dp"
+      android:paddingEnd="0dp"
+      android:paddingRight="0dp">
 
     <TextView
         android:id="@+id/list_item_date_textview"
@@ -34,7 +37,6 @@
   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_weight="1"
       android:orientation="vertical">
 
     <TextView
