--- a/app/src/main/res/layout/list_item_forecast_today.xml
+++ b/app/src/main/res/layout/list_item_forecast_today.xml
@@ -12,21 +12,21 @@
 
     <TextView
         android:id="@+id/list_item_date_textview"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Yesterday"/>
+        android:gravity="center_horizontal"/>
 
     <TextView
         android:id="@+id/list_item_high_textview"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="200"/>
+        android:gravity="center_horizontal"/>
 
     <TextView
         android:id="@+id/list_item_low_textview"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="-100"/>
+        android:gravity="center_horizontal"/>
 
   </LinearLayout>
 
@@ -46,7 +46,7 @@
         android:id="@+id/list_item_forecast_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Meteors"/>
+        android:gravity="center_horizontal"/>
 
   </LinearLayout>
 
