--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -9,6 +9,24 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".DetailFragment">
 
-  <include layout="@layout/list_item_forecast_today" />
+  <include layout="@layout/list_item_forecast_today"
+      android:layout_height="wrap_content"
+      android:layout_width="match_parent"/>
+
+  <TextView
+      android:id="@+id/fragment_detail_humidity_textview"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"/>
+
+  <TextView
+      android:id="@+id/fragment_detail_wind_textview"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"/>
+
+  <TextView
+      android:id="@+id/fragment_detail_pressure_textview"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"/>
+
 
 </LinearLayout>
