--- a/app/src/main/res/layout/list_item_forecast.xml
+++ b/app/src/main/res/layout/list_item_forecast.xml
@@ -10,7 +10,8 @@
       android:id="@+id/list_item_icon"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:src="@drawable/ic_launcher"/>
+      android:src="@drawable/ic_launcher"
+      android:contentDescription="@string/weather_icon_contentDescription"/>
 
   <LinearLayout
       android:layout_width="0dp"
